# UCL-East-Open-Day-Demos

./: .gitignore  README.md
batdetect2/: draw.py  main.py  process.py  pygame_draw.py  record.py
birdnet/: README.md  draw.py  main.py  process.py  pygame_draw.py  pyproject.toml  record.py
birdnet/src/birdnetspec/: draw.py  main.py  process.py
birdnetdisplay/: draw.py  process.py
camera/: README.md  main.py  pyproject.toml  requirements.txt
kmera/: main.py
